...
                            style = MangroTheme.typography.body.bodyL,
                        )
                    }
                } else {
                    LazyColumn(
                        state = if (uiState.tab == ProductListTab.PRODUCTS) productListState else pickupListState,
                        modifier = Modifier.fillMaxSize().testTag("owner-holds-list"),
                        contentPadding = PaddingValues(bottom = (if (uiState.cancellationCount == 0) 0.dp else 112.dp) + floatingBarHeight),
                    ) {
                        if (uiState.tab == ProductListTab.PRODUCTS) {
                            item {
                                ManagementLoadStatus(
                                    products.loadState.prepend is LoadState.Loading,
...
